--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "libexif-0.6.21.tar.bz2": a52219b12dbc8d33fc096468591170fda71316c0
+  libexif-0.6.22.tar.xz: b396c562dbf44567ef796f324e7760b15e657523
