--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  libexif-0.6.23.tar.xz: e8439ad25f19b53874b685c3a9e80e6d883c1b2a
+  libexif-0.6.24.tar.bz2: 8b42080dc6d62ee9a89658e878b622f2eaefe986
